fixed album title width problem (it was shifted a bit to the right)

--- a/front-end/src/components/search/components/each-search-component/Songs/songs.module.css
+++ b/front-end/src/components/search/components/each-search-component/Songs/songs.module.css
@@ -138,7 +138,7 @@
     justify-content: left;
     align-items: center;
     font-size: 12px;
-    width: 20vw;
+    width: 21vw;
     color: #b3b3b3;
 
 
